Added Adify support More internationalization changes
git-svn-id: https://plugins.svn.wordpress.org/advertising-manager/trunk@94419 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/advertising-manager.css
+++ b/advertising-manager.css
@@ -18,6 +18,7 @@ th {border-bottom:2px solid #000;font-size:smaller;}
 
 .ox_adnet_adbrite {padding-left: 25px; background: transparent url(http://files.adbrite.com/mb/images/favicon.ico) no-repeat center left; }
 .ox_adnet_adgridwork {padding-left: 25px; background: transparent url(http://www.adgridwork.com/favicon.ico) no-repeat center left; }
+.ox_adnet_adify {padding-left: 25px; background: transparent url(http://www.adify.com/favicon.ico) no-repeat center left; }
 .ox_adnet_adpinion {padding-left:25px;background:url(http://www.adpinion.com/static/images/logo_small.gif) left no-repeat;}
 .ox_adnet_adroll {padding-left:25px;background:url(http://www.adroll.com/i/favicon.ico) left no-repeat;}
 .ox_adnet_adsense {padding-left:25px;background:url(http://www.google.com/favicon.ico) left no-repeat;}
