Added Chitika support Added Counter for ad networks Fixed regex for finding ad calls in text Added support for alt url
git-svn-id: https://plugins.svn.wordpress.org/advertising-manager/trunk@103214 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/advertising-manager.css
+++ b/advertising-manager.css
@@ -22,6 +22,7 @@ th {border-bottom:2px solid #000;font-size:smaller;}
 .ox_adnet_adpinion {padding-left:25px;background:url(http://www.adpinion.com/static/images/logo_small.gif) left no-repeat;}
 .ox_adnet_adroll {padding-left:25px;background:url(http://www.adroll.com/i/favicon.ico) left no-repeat;}
 .ox_adnet_adsense {padding-left:25px;background:url(http://www.google.com/favicon.ico) left no-repeat;}
+.ox_adnet_chitika {padding-left: 25px; background: transparent url(http://chitika.com/favicon.ico) no-repeat center left; }
 .ox_adnet_cj {padding-left:25px;background:url(http://www.cj.com/favicon.ico) left no-repeat;}
 .ox_adnet_html {padding-left:25px;background:url(./images/code.png) left no-repeat;}
 .ox_adnet_crispads {padding-left:25px;background:url(http://www.crispads.com/favicon.ico) left no-repeat;}
