--- a/scripts/advman.css
+++ b/scripts/advman.css
@@ -24,11 +24,11 @@ th {border-bottom:2px solid #000;font-size:smaller;}
 .ox_plugin_adsense {padding-left:25px;background:url(http://www.google.com/favicon.ico) left no-repeat;}
 .ox_plugin_chitika {padding-left: 25px; background: transparent url(http://chitika.com/favicon.ico) no-repeat center left; }
 .ox_plugin_cj {padding-left:25px;background:url(http://www.cj.com/favicon.ico) left no-repeat;}
-.ox_ad_html {padding-left:25px;background:url(./images/code.png) left no-repeat;}
+.ox_ad_html {padding-left:25px;background:url(../images/code.png) left no-repeat;}
 .ox_plugin_crispads {padding-left:25px;background:url(http://www.crispads.com/favicon.ico) left no-repeat;}
 .ox_plugin_openx {padding-left:25px;background:url(http://www.openx.org/favicon.ico) left no-repeat;}
 .ox_plugin_widgetbucks {padding-left:25px;background:url(http://www.widgetbucks.com/favicon.ico) left no-repeat;}
-.ox_plugin_shoppingads {padding-left:25px;background:url(./images/shoppingads.png) left no-repeat;}
+.ox_plugin_shoppingads {padding-left:25px;background:url(../images/shoppingads.png) left no-repeat;}
 .ox_plugin_ypn {padding-left:25px;background:url(http://www.yahoo.com/favicon.ico) left no-repeat;}
 
-.default_note {padding-left:20px;background:url(./images/default.png) left no-repeat;width:16px;height:16px;}
+.default_note {padding-left:20px;background:url(../images/default.png) left no-repeat;width:16px;height:16px;}
