Added 'apply_filters' to widget title. Added some ad network specific fields back in places where they were missing Formatted fields better Added XHTML compatibility to code fields
git-svn-id: https://plugins.svn.wordpress.org/advertising-manager/trunk@125791 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/scripts/advman.css
+++ b/scripts/advman.css
@@ -3,6 +3,9 @@ th {border-bottom:2px solid #000;font-size:smaller;}
 #manage-ads {}
 #manage-ads td {padding: 2px 5px; vertical-align:middle;}
 
+.advman_label {width:100px;}
+.advman_field {white-space:nowrap;}
+
 .network_blanking {height:20px;}
 .network_header td {border-top:1px solid #000;font-weight:bold;background-color:#ddd;}
 .network_admin * {font-weight:normal; text-align:center;}
