--- a/scripts/jquery.multiSelect.css
+++ b/scripts/jquery.multiSelect.css
@@ -1,7 +1,7 @@
 .multiSelect {
 	width: 202px;
 	border: solid 1px #BBB;
-	background: #FFF url(dropdown.gif) right center no-repeat;
+	background: #FFF url(../images/dropdown.gif) right center no-repeat;
 	padding: 2px 4px;
 	padding-right: 20px;
 	display: inline;
@@ -9,7 +9,7 @@
 }
 
 .multiSelect.hover {
-	background: url(dropdown_hover.gif) right center no-repeat;
+	background: url(../images/dropdown_hover.gif) right center no-repeat;
 }
 
 .multiSelect.active, 
@@ -18,7 +18,7 @@
 }
 
 .multiSelect.active {
-	background: url(dropdown_active.gif) right center no-repeat;
+	background: url(../images/dropdown_active.gif) right center no-repeat;
 }
 
 .multiSelectOptions {
