--- a/scripts/advman.css
+++ b/scripts/advman.css
@@ -35,3 +35,14 @@ th {border-bottom:2px solid #000;font-size:smaller;}
 .ox_plugin_ypn {padding-left:25px;background:url(http://www.yahoo.com/favicon.ico) left no-repeat;}
 
 .default_note {padding-left:20px;background:url(../images/default.png) left no-repeat;width:16px;height:16px;}
+
+.fixed .column-advman-active,
+.fixed .column-advman-default,
+.fixed .column-advman-format,
+.fixed .column-advman-stats,
+.fixed .column-advman-type {
+	width: 10%;
+}
+.fixed .column-advman-notes {
+	width: 15%;
+}
