--- a/scripts/advman.css
+++ b/scripts/advman.css
@@ -1,4 +1,4 @@
-th {border-bottom:2px solid #000;font-size:smaller;}
+/*th {border-bottom:2px solid #000;font-size:smaller;}*/
 #default-options td{border-bottom:1px solid #000;}
 #manage-ads {}
 #manage-ads td {padding: 2px 5px; vertical-align:middle;}
