split up actions and pages
git-svn-id: https://plugins.svn.wordpress.org/advertising-manager/trunk@949874 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/scripts/advman.css
+++ b/scripts/advman.css
@@ -34,7 +34,7 @@
 .ox_plugin_shoppingads {padding-left:25px;background:url(../images/shoppingads.png) left no-repeat;}
 .ox_plugin_ypn {padding-left:25px;background:url(http://www.yahoo.com/favicon.ico) left no-repeat;}
 
-.default_note {padding-left:20px;background:url(../images/default.png) left no-repeat;width:16px;height:16px;}
+.default_note {background:url(../images/default.png) left no-repeat;width:16px;height:16px;}
 
 .fixed .column-advman-active,
 .fixed .column-advman-default,
