Update preview, add analytics functionality, reword quality
git-svn-id: https://plugins.svn.wordpress.org/advertising-manager/trunk@1000862 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/scripts/advman.css
+++ b/scripts/advman.css
@@ -43,6 +43,9 @@
 .fixed .column-advman-type {
 	width: 10%;
 }
+.fixed .column-impressions {
+    text-align: right;
+}
 .fixed .column-advman-notes {
 	width: 15%;
 }
